--- a/package.json
+++ b/package.json
@@ -46,20 +46,20 @@
     "@polymer/iron-meta": "^3.0.1"
   },
   "devDependencies": {
-    "@advanced-rest-client/arc-demo-helper": "^1.0.3",
+    "@advanced-rest-client/arc-demo-helper": "^1.0.4",
     "@advanced-rest-client/testing-karma-sl": "^1.0.2",
-    "@commitlint/cli": "^7.0.0",
+    "@commitlint/cli": "^8.1.0",
     "@commitlint/config-conventional": "^7.0.0",
     "@open-wc/eslint-config": "^0.4.1",
     "@open-wc/prettier-config": "^0.1.0",
-    "owc-dev-server": "^1.0.0",
-    "@open-wc/testing-karma": "^2.0.0",
-    "webpack-merge": "^4.1.5",
     "@open-wc/testing": "^0.11.1",
+    "@open-wc/testing-karma": "^2.0.16",
     "husky": "^1.0.0",
     "lint-staged": "^8.0.0",
     "lit-element": "^2.0.1",
-    "lit-html": "^1.0.0"
+    "lit-html": "^1.1.1",
+    "owc-dev-server": "^1.0.0",
+    "webpack-merge": "^4.1.5"
   },
   "lint-staged": {
     "*.js": [
