--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "description": "A mixin to implement custom input validator",
   "version": "1.0.0",
   "license": "Apache-2.0",
-  "main": "validator-mixin.js",
+  "main": "index.js",
+  "module": "index.js",
   "keywords": [
     "api-components",
     "arc-components",
@@ -28,29 +29,29 @@
     "email": "arc@mulesoft.com"
   },
   "dependencies": {
-    "@polymer/iron-meta": "^3.0.1"
+    "@open-wc/dedupe-mixin": "^1.2.17"
   },
   "devDependencies": {
-    "@advanced-rest-client/arc-demo-helper": "^1.0.14",
-    "@advanced-rest-client/eslint-config": "^1.1.1",
-    "@advanced-rest-client/prettier-config": "^0.1.0",
-    "@advanced-rest-client/testing-karma-sl": "^1.0.3",
-    "@commitlint/cli": "^8.1.0",
-    "@commitlint/config-conventional": "^7.0.0",
-    "@open-wc/testing": "^2.2.8",
-    "@open-wc/testing-karma": "^3.1.28",
-    "lit-element": "^2.2.1",
-    "lit-html": "^1.1.2",
-    "deepmerge": "^4.0.0",
-    "husky": "^1.0.0",
-    "karma": "^4.2.0",
-    "lint-staged": "^9.2.5",
-    "sinon": "^7.4.1"
+    "@advanced-rest-client/arc-demo-helper": "^1.0.17",
+    "@advanced-rest-client/testing-karma-sl": "^1.3.1",
+    "@open-wc/eslint-config": "^2.0.0",
+    "@open-wc/testing": "^2.5.16",
+    "@open-wc/testing-karma": "^3.3.22",
+    "deepmerge": "^4.2.2",
+    "es-dev-server": "^1.50.0",
+    "eslint": "^7.0.0",
+    "eslint-config-prettier": "^6.11.0",
+    "husky": "^4.2.5",
+    "lint-staged": "^10.2.2",
+    "lit-element": "^2.3.1",
+    "lit-html": "^1.2.1",
+    "prettier": "^2.0.4",
+    "sinon": "^9.0.1",
+    "typescript": "^3.9.2",
+    "typescript-lit-html-plugin": "^0.9.0"
   },
   "scripts": {
-    "update-types": "gen-typescript-declarations --deleteExisting --outDir .",
     "start": "es-dev-server --app-index demo/index.html --node-resolve --open --watch",
-    "start:compatibility": "es-dev-server --app-index demo/index.html --compatibility all --node-resolve --open --watch",
     "lint:eslint": "eslint --ext .js,.html . --ignore-path .gitignore",
     "format:eslint": "eslint --ext .js,.html . --fix --ignore-path .gitignore",
     "lint:prettier": "prettier \"**/*.js\" --check --ignore-path .gitignore",
@@ -59,15 +60,41 @@
     "format": "npm run format:eslint && npm run format:prettier",
     "test": "karma start --coverage",
     "test:watch": "karma start --auto-watch=true --single-run=false",
-    "test:update-snapshots": "karma start --update-snapshots",
-    "test:prune-snapshots": "karma start --prune-snapshots",
-    "test:compatibility": "karma start --compatibility all --coverage",
-    "test:compatibility:watch": "karma start --compatibility all --auto-watch=true --single-run=false",
-    "test:sl": "karma start karma.sl.config.js --compatibility all --coverage"
+    "test:sl": "karma start karma.sl.config.js --compatibility auto --coverage"
+  },
+  "eslintConfig": {
+    "extends": [
+      "@open-wc/eslint-config",
+      "eslint-config-prettier"
+    ],
+    "overrides": [
+      {
+        "files": [
+          "**/demo/**/*.js",
+          "**/demo/**/*.html"
+        ],
+        "rules": {
+          "no-console": "off",
+          "no-unused-expressions": "off",
+          "class-methods-use-this": "off",
+          "import/no-extraneous-dependencies": "off"
+        }
+      }
+    ]
+  },
+  "prettier": {
+    "singleQuote": true,
+    "arrowParens": "avoid"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
   },
   "lint-staged": {
     "*.js": [
       "eslint --fix",
+      "prettier --write",
       "git add"
     ]
   }
