--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@anypoint-web-components/validator-mixin",
   "description": "A mixin to implement custom input validator",
-  "version": "1.1.1",
+  "version": "1.1.2",
   "license": "Apache-2.0",
   "main": "index.js",
   "module": "index.js",
@@ -13,12 +13,10 @@
     "web-components"
   ],
   "authors": [
-    "Pawel Psztyc",
-    "The Advanced REST client authors <arc@mulesoft.com>"
+    "Pawel Psztyc"
   ],
   "contributors": [
-    "Pawel Psztyc",
-    "The Advanced REST client authors <arc@mulesoft.com>"
+    "Your name can be here!"
   ],
   "repository": {
     "type": "git",
@@ -29,38 +27,34 @@
     "email": "arc@mulesoft.com"
   },
   "dependencies": {
-    "@open-wc/dedupe-mixin": "^1.2.17"
+    "@open-wc/dedupe-mixin": "^1.3.0"
   },
   "devDependencies": {
     "@advanced-rest-client/arc-demo-helper": "^1.0.17",
-    "@advanced-rest-client/testing-karma-sl": "^1.3.1",
-    "@open-wc/eslint-config": "^2.0.0",
-    "@open-wc/testing": "^2.5.16",
-    "@open-wc/testing-karma": "^3.3.22",
-    "deepmerge": "^4.2.2",
-    "es-dev-server": "^1.50.0",
-    "eslint": "^7.0.0",
-    "eslint-config-prettier": "^6.11.0",
-    "husky": "^4.2.5",
-    "lint-staged": "^10.2.2",
-    "lit-element": "^2.3.1",
-    "lit-html": "^1.2.1",
-    "prettier": "^2.0.4",
-    "sinon": "^9.0.1",
-    "typescript": "^3.9.2",
+    "@open-wc/eslint-config": "^2.1.0",
+    "@open-wc/testing": "^2.5.32",
+    "@web/dev-server": "^0.1.8",
+    "@web/test-runner": "^0.12.15",
+    "@web/test-runner-playwright": "^0.8.4",
+    "eslint": "^7.21.0",
+    "eslint-config-prettier": "^8.1.0",
+    "husky": "^4.3.8",
+    "lint-staged": "^10.5.4",
+    "lit-element": "^2.4.0",
+    "lit-html": "^1.3.0",
+    "sinon": "^9.2.4",
+    "typescript": "^4.2.2",
     "typescript-lit-html-plugin": "^0.9.0"
   },
   "scripts": {
-    "start": "es-dev-server --app-index demo/index.html --node-resolve --open --watch",
+    "start": "web-dev-server --app-index demo/index.html --node-resolve --open --watch --root-dir .",
     "lint:eslint": "eslint --ext .js,.html . --ignore-path .gitignore",
     "format:eslint": "eslint --ext .js,.html . --fix --ignore-path .gitignore",
-    "lint:prettier": "prettier \"**/*.js\" --check --ignore-path .gitignore",
-    "format:prettier": "prettier \"**/*.js\" --write --ignore-path .gitignore",
-    "lint": "npm run lint:eslint && npm run lint:prettier",
-    "format": "npm run format:eslint && npm run format:prettier",
-    "test": "karma start --coverage",
-    "test:watch": "karma start --auto-watch=true --single-run=false",
-    "test:sl": "karma start karma.sl.config.js --compatibility auto --coverage"
+    "lint:types": "tsc",
+    "lint": "npm run lint:eslint",
+    "format": "npm run format:eslint",
+    "test": "web-test-runner test/**/*.test.js --coverage --node-resolve --playwright --browsers chromium firefox webkit",
+    "test:watch": "web-test-runner test/**/*.test.js --node-resolve --watch --playwright --browsers chromium"
   },
   "eslintConfig": {
     "extends": [
@@ -82,10 +76,6 @@
       }
     ]
   },
-  "prettier": {
-    "singleQuote": true,
-    "arrowParens": "avoid"
-  },
   "husky": {
     "hooks": {
       "pre-commit": "lint-staged"
@@ -93,9 +83,7 @@
   },
   "lint-staged": {
     "*.js": [
-      "eslint --fix",
-      "prettier --write",
-      "git add"
+      "eslint --fix"
     ]
   }
 }
